1.0 (Say no more):
 * Added interface translations #4
 * Switch to GPLv3
 * Added RPM packages
 * Simplified and improved Makefile
 * Cleaning of the code to try to be at least more compatible with PEP-8
 * Dont clean out status labels when restarting server

0.2.1:
 * Fixed a serious security bug in which /screenshot prompted no auth. Also
 fixed sending the wrong Content-Lenght for the screenshot.

0.2 (I've been watching you...):
 * Rewrote the screenshot module completely to support active window
 screenshots and scaling. #3 #10 
 * Added Basic HTTP Authentication.
 * Notifications now show up relative to the status icon.
 * Added option (-debug) to show all console output #5
 * Add options to report errors in the system tray (blinking). #7
 
 * Updated GUI on Windows not to show widgets for features that are not
 available (libnotify, screenshot active window)

 * Completely rewrote the console output and Gui logging engines. Simplified
 and fixed many isssues. Some parts of the Gui were also overhauled.
 * Automatically scroll to the last event on both logs.

 * Removed all useless type-checking and started relying on my own exceptions
 and error handlers.

 * Completely separated and encapsulated the Twisted Server code.
  
 * Improved the configuration engine to convert numbers and bools into int and
 bool rather than str. Also the Gui now saves on a per-key basis and not on 
 a all-or-nothing dict differential #9
 * Rewrote parts of the configuration engine to better handling upgrading from
 previous configuration files that are missing sections or options. #12

 * Recommented the whole code according to Epytext Markup and also did major
 tweaks to naming. #8
 * Changed strings in text to be more literal and intuitive 

 * Updated documentation and added new references.

 * Minor improvements to Debian build process.
 * Fixed minor UI quirks.
 * Fixed a syntax bug in uigtk.py when GTK version is < 2.10