@@ -199,6 +199,7 @@ class ScreenshotServer(BaseHTTPServer):
         self.root = RootResource(self.gui, self.authresource, self.itaka_globals.head_html + self.configuration['html']['html'] + self.itaka_globals.footer_html)
         self.add_child_to_resource('root', '', self.root)
         self.add_child_to_resource('root', 'screenshot', ScreenshotResource(self.gui, self.authresource))
+        self.add_child_to_resource('root', 'favicon.ico', IconResource(self.gui, self.authresource))
         self.create_site(self.root)
 
 class AuthenticatedResource:
@@ -447,6 +448,51 @@ class ScreenshotResource(resource.Resource):
                 self.get_screenshot()
             except error.ItakaScreenshotError:
                 return
+            self.request.setHeader('Content-Type', self.type)
+            self.request.setHeader('Content-Length', self.size)
+            self.request.setHeader('Connection', 'close')
+            return self.data
+
+class IconResource(resource.Resource):
+    """ 
+    Handle server requests and call for favicon.ico
+    """
+
+    def __init__(self, gui_instance, auth_instance):
+        """ 
+        Constructor
+
+        @type gui_instance: Gui
+        @param gui_instance: An instance of our L{Gui} class
+
+        @type auth_instance: AuthenticatedResource
+        @param auth_instance: An instance of our L{AuthenticatedResource} class
+        """
+
+        self.gui = gui_instance
+        self.auth = auth_instance
+        self.itaka_globals = self.gui.itaka_globals
+
+    def render_GET(self, request):
+        """
+        Handle GET requests
+
+        @type request: instance
+        @param request: twisted.web.server.Request instance
+        """
+
+        self.configuration = self.gui.configuration
+        self.request = request
+        self.type = 'image/x-icon'
+        self.file = os.path.join(self.itaka_globals.image_dir, 'favicon.ico')
+        self.data = open(self.file, 'rb').read()
+        self.size = str(os.stat(self.file).st_size)
+
+        if self.configuration['server']['authentication']:
+            if self.auth.authenticated or self.auth.authenticate(self.request):
+                self.auth.set_request_data(self.data, self.size, self.type, True)
+            return self.auth.return_object_data()
+        else:
             self.request.setHeader('Content-Type', self.type)
             self.request.setHeader('Content-Length', self.size)
             self.request.setHeader('Connection', 'close')
